--- a/index.html
+++ b/index.html
@@ -536,7 +536,10 @@ For documentation of your own system you use better the <em>plain</em> version.<
 <div class="sect1">
 <h2 id="section-introduction-and-goals">1. Introduction and Goals</h2>
 <div class="sectionbody">
-<div class="sidebarblock arc42help">
+<div class="paragraph arc42help">
+<p>Testing deploy</p>
+</div>
+<div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
 <p>Describes the relevant requirements and the driving forces that software architects and development team must consider. These include</p>
@@ -1213,7 +1216,7 @@ building block instances depicted in this diagram.&gt;</em></p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="335">
+<img src="./images/Sequence%20diagram.png" alt="Sequence diagram" width="332" height="343">
 </div>
 </div>
 </div>
@@ -1740,7 +1743,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-01-30 17:16:52 +0100
+Last updated 2023-01-30 11:27:10 +0100
 </div>
 </div>
 </body>
