--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#section-introduction-and-goals">1. Introduction and Goals</a>
+<li><a href="#section-introduction-and-goals">1. Introduction and Goals Testing deploygit</a>
 <ul class="sectlevel2">
 <li><a href="#_requirements_overview">1.1. Requirements Overview</a></li>
 <li><a href="#_quality_goals">1.2. Quality Goals</a></li>
@@ -534,12 +534,9 @@ For documentation of your own system you use better the <em>plain</em> version.<
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-introduction-and-goals">1. Introduction and Goals</h2>
+<h2 id="section-introduction-and-goals">1. Introduction and Goals Testing deploygit</h2>
 <div class="sectionbody">
-<div class="paragraph arc42help">
-<p>Testing deploy</p>
-</div>
-<div class="sidebarblock">
+<div class="sidebarblock arc42help">
 <div class="content">
 <div class="paragraph">
 <p>Describes the relevant requirements and the driving forces that software architects and development team must consider. These include</p>
